--- a/K53_Sign_Test/road_sign_test6.html
+++ b/K53_Sign_Test/road_sign_test6.html
@@ -415,13 +415,12 @@
 <div class="main-layout">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
      crossorigin="anonymous"></script>
-<!-- Moneymaker -->
 <ins class="adsbygoogle"
      style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6t+ed+2i-1n-4w"
      data-ad-client="ca-pub-7523555661265068"
-     data-ad-slot="7351075048"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="1338431504"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -1353,13 +1352,12 @@
 <div class="main-layout">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
      crossorigin="anonymous"></script>
-<!-- Moneymaker -->
 <ins class="adsbygoogle"
      style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6t+ed+2i-1n-4w"
      data-ad-client="ca-pub-7523555661265068"
-     data-ad-slot="7351075048"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="1338431504"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -2326,13 +2324,12 @@
 <div class="main-layout">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
      crossorigin="anonymous"></script>
-<!-- Moneymaker -->
 <ins class="adsbygoogle"
      style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6t+ed+2i-1n-4w"
      data-ad-client="ca-pub-7523555661265068"
-     data-ad-slot="7351075048"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="1338431504"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -3236,5 +3233,6 @@ document.querySelectorAll('.municipality-widget').forEach(widget => {
   });
 });
 </script>
+
 
 
