--- a/K53_Learners_Test/a_heavyvehicle_test.html
+++ b/K53_Learners_Test/a_heavyvehicle_test.html
@@ -786,13 +786,12 @@
 <div class="main-layout">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
      crossorigin="anonymous"></script>
-<!-- Moneymaker -->
 <ins class="adsbygoogle"
      style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6t+ed+2i-1n-4w"
      data-ad-client="ca-pub-7523555661265068"
-     data-ad-slot="7351075048"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="1338431504"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -1727,13 +1726,12 @@
 <div class="main-layout">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
      crossorigin="anonymous"></script>
-<!-- Moneymaker -->
 <ins class="adsbygoogle"
      style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6t+ed+2i-1n-4w"
      data-ad-client="ca-pub-7523555661265068"
-     data-ad-slot="7351075048"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="1338431504"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -2560,13 +2558,12 @@
 <div class="main-layout">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
      crossorigin="anonymous"></script>
-<!-- Moneymaker -->
 <ins class="adsbygoogle"
      style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6t+ed+2i-1n-4w"
      data-ad-client="ca-pub-7523555661265068"
-     data-ad-slot="7351075048"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="1338431504"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -3490,13 +3487,12 @@
 <div class="main-layout">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
      crossorigin="anonymous"></script>
-<!-- Moneymaker -->
 <ins class="adsbygoogle"
      style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6t+ed+2i-1n-4w"
      data-ad-client="ca-pub-7523555661265068"
-     data-ad-slot="7351075048"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="1338431504"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -4355,13 +4351,12 @@
 <div class="main-layout">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
      crossorigin="anonymous"></script>
-<!-- Moneymaker -->
 <ins class="adsbygoogle"
      style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6t+ed+2i-1n-4w"
      data-ad-client="ca-pub-7523555661265068"
-     data-ad-slot="7351075048"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="1338431504"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -5288,13 +5283,12 @@
 <div class="main-layout">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7523555661265068"
      crossorigin="anonymous"></script>
-<!-- Moneymaker -->
 <ins class="adsbygoogle"
      style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-6t+ed+2i-1n-4w"
      data-ad-client="ca-pub-7523555661265068"
-     data-ad-slot="7351075048"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
+     data-ad-slot="1338431504"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -6038,3 +6032,4 @@ document.querySelectorAll('.municipality-widget').forEach(widget => {
   });
 });
 </script>
+
